# MongoElector

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  codecov.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  travis_pypi_setup.py
.circleci/: config.yml
.github/workflows/: publish-to-pypi.yml  workflow.yml
docs/: Makefile  code.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  mongoelector.rst  usage.rst
mongoelector/: __init__.py  elector.py  locker.py
tests/: conftest.py  test_mongoelector.py  test_mongolocker.py
